--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welkom | Workshop HTML en CSS</title>
+    <style>
+    h1 {color: red; background-color: rgb(253, 14, 14); }
+    h2 {color: brown;} 
+    body {background-color: rgb(226, 64, 43);}
+      </style>
   </head>
   <body>
-    <h1>Welkom</h1>
+    <h1>Ono Gielen</h1>
+    <h2>siuuuu</h2>
     <p>
-      Hallo en welkom op de workshop: ‘Bouw je eigen website met HTML &amp;
-      CSS’.
+      hruheguhughrguhtabondyemechnfugnzig 
     </p>
+    <figure><img src="suit-of-clothes-joe-biden-png-0.png" alt="">
+    </figure>
+    <p><a href="https://youtu.be/OyDyOweu-PA" target="_blank">klik hier</a></p>
   </body>
 </html>
